<resources>
    <string name="app_name">SnipShot</string>
    <string name="todo">TODO</string>
    <string name="snip_preview">snip preview</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="detected_language">Detected Language: %1$s</string>
    <string name="translation">Translation:</string>
    <string name="copy_translated_text">Copy translated text</string>
    <string name="translated_text_will_appear_here">Translated text will appear here</string>
    <string name="new_snip">New Snip</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="extracted_text_will_appear_here">Extracted text will appear here</string>
    <string name="copy_extracted_text">Copy extracted text</string>
    <string name="extracted_text">Extracted Text:</string>
    <string name="translated_text">Translated Text</string>
    <string name="detected_language_unknown">Detected Language: Unknown</string>
    <string name="help_placeholder">Help Placeholder</string>
    <string name="save_settings">Save Settings</string>
    <string name="select_translation_language">Select Your Translation Language:</string>
    <string name="back">Back</string>
    <string name="drag_here_to_close">Drag here to close</string>
    <string name="screenshot">Screenshot</string>
    <string name="open_in_translate">Open in Translate</string>
</resources>